fixed slider rup

--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
     </div>
 
 
-    <!-- PRE LOADER
+    <!-- PRE LOADER -->
     <section class="preloader">
         <div class="spinner">
             <span class="spinner-rotate"></span>
         </div>
 
-    </section> -->
+    </section>
 
 
     <!-- MENU -->
@@ -409,12 +409,10 @@
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
                             <small><i class="fa fa-clock-o"></i> Nov 11, 2018</small>
-                            <h3><a href="https://medium.com/@bolajiayodeji/how-to-test-a-pull-request-locally-before-merging-634bb205d3a6">How
-                                    to
-                                    test a Pull Request locally before Merging.</a></h3>
+                            <h3><a href="https://medium.com/@bolajiayodeji/how-to-test-a-pull-request-locally-before-merging-634bb205d3a6" target="_blank">How to test a Pull Request locally before Merging.</a></h3>
                             <p>In this tutorial, I would show you how to check, test and make changes to a pull request
                                 before merging.</p>
-                            <a href="https://medium.com/@bolajiayodeji/how-to-test-a-pull-request-locally-before-merging-634bb205d3a6"
+                            <a href="https://medium.com/@bolajiayodeji/how-to-test-a-pull-request-locally-before-merging-634bb205d3a6" target="_blank"
                                 class="btn section-btn">Read
                                 article</a>
                         </div>
@@ -426,10 +424,10 @@
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
                             <small><i class="fa fa-clock-o"></i> Nov 8, 2018</small>
-                            <h3><a href="https://pwafire.org/developer/codelabs/build-pwa-with-github-pages-and-firebase-hosting/">How
+                            <h3><a href="https://pwafire.org/developer/codelabs/build-pwa-with-github-pages-and-firebase-hosting/" target="_blank">How
                                     to build Progressive Web Apps and deploy to Firebase and GitHub Pages.</a></h3>
                             <p>In this Codelab, we are going to convert a basic static site into a Progressive Web App</p>
-                            <a href="https://pwafire.org/developer/codelabs/build-pwa-with-github-pages-and-firebase-hosting/"
+                            <a href="https://pwafire.org/developer/codelabs/build-pwa-with-github-pages-and-firebase-hosting/" target="_blank"
                                 class="btn section-btn">Read article</a>
                         </div>
                     </div>
@@ -440,11 +438,11 @@
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
                             <small><i class="fa fa-clock-o"></i> Nov 5, 2018</small>
-                            <h3><a href="https://medium.com/@bolajiayodeji/how-to-convert-github-markdown-files-to-a-simple-website-b08602d05e1c">How
+                            <h3><a href="https://medium.com/@bolajiayodeji/how-to-convert-github-markdown-files-to-a-simple-website-b08602d05e1c" target="_blank">How
                                     to convert GitHub Markdown files to a simple website</a></h3>
                             <p>This little guide demonstrate how to turn any Github repository with a bunch of Markdown
                                 files into a simple website using Github Pages and Jekyll.</p>
-                            <a href="https://medium.com/@bolajiayodeji/how-to-convert-github-markdown-files-to-a-simple-website-b08602d05e1c"
+                            <a href="https://medium.com/@bolajiayodeji/how-to-convert-github-markdown-files-to-a-simple-website-b08602d05e1c" target="_blank"
                                 class="btn section-btn">Read
                                 article</a>
                         </div>
@@ -456,10 +454,10 @@
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
                             <small><i class="fa fa-clock-o"></i> May 2, 2018</small>
-                            <h3><a href="https://medium.com/@bolajiayodeji/the-new-features-of-html-5-2-8e4829df9b72">The
+                            <h3><a href="https://medium.com/@bolajiayodeji/the-new-features-of-html-5-2-8e4829df9b72" target="_blank">The
                                     new features of HTML 5.2</a></h3>
                             <p>The newly released HTML 5.2, changes and new features.</p>
-                            <a href="https://medium.com/@bolajiayodeji/the-new-features-of-html-5-2-8e4829df9b72" class="btn section-btn">Read
+                            <a href="https://medium.com/@bolajiayodeji/the-new-features-of-html-5-2-8e4829df9b72" target="_blank" class="btn section-btn">Read
                                 Article</a>
                         </div>
                     </div>
@@ -602,7 +600,7 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                            <h3>Bolaji Ayodeji - NIGERIA</h3>
+                                            <h3>John Doe - NIGERIA</h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -612,7 +610,7 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                            <h3>Bolaji Ayodeji - NIGERIA</h3>
+                                            <h3>John Doe - NIGERIA</h3>
                                         </blockquote>
                                     </div>
                                     <div class="active item">
@@ -622,7 +620,7 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                            <h3>Bolaji Ayodeji - NIGERIA</h3>
+                                            <h3>John Doe - NIGERIA</h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -632,7 +630,7 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                            <h3>Bolaji Ayodeji - NIGERIA</h3>
+                                            <h3>John Doe - NIGERIA</h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -642,7 +640,7 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                            <h3>Bolaji Ayodeji - NIGERIA</h3>
+                                            <h3>John Doe - NIGERIA</h3>
                                         </blockquote>
                                     </div>
                                     <div class="item">
@@ -652,7 +650,7 @@
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
                                                 laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
                                                 temporibus nisi accusamus.</p>
-                                            <h3>Bolaji Ayodeji - NIGERIA</h3>
+                                            <h3>John Doe - NIGERIA</h3>
                                         </blockquote>
                                     </div>
                                 </div>
