--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html />
-<html lang="en-US" />
+<html lang="en-US">
 
 <head>
 
@@ -27,14 +27,14 @@
     <meta name="twitter:site" content="@iambolajiayodeji" />
     <meta name="twitter:creator" content="@iambolajiayodeji" />
     <meta name="twitter:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
-    <meta name="twitter:image" content="images/about-image.jpg">
-    <meta name="twitter:card" content="images/about-image.jpg">
+    <meta name="twitter:image" content="images/my-picture.jpg">
+    <meta name="twitter:card" content="images/my-picture.jpg">
     <meta name="description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security.">
     <!-- Facebook card -->
     <meta property="fb:admins" content="100018476377896" />
     <meta property="fb:page_id" content="872194893169133" />
     <!--Open Graph-->
-    <meta property="og:image" content="images/about-image.jpg">
+    <meta property="og:image" content="images/my-picture.jpg">
     <meta property="og:title" content="BOLAJI AYODEJI 🔥🚀 | Portfolio" />
     <meta property="og:description" content="I build and deploy software applications with great focus on stunning interface design, optimization and security." />
     <meta name="author" content="BOLAJI AYODEJI">
@@ -49,7 +49,7 @@
             "@type": "Software Developer",
             "name": "BOLAJI AYODEJI (@iambolajiayo)",
             "url": "https://bolajiayodeji.github.io",
-            "logo": "https://bolajiayodeji.github.io/images/about-image.png",
+            "logo": "https://bolajiayodeji.github.io/images/my-picture.jpg",
             "description": "I build and deploy software applications with great focus on stunning interface design, optimization and security."
         }
     </script>
@@ -58,8 +58,6 @@
     <link rel="stylesheet" href="css/magnific-popup.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="assets/nucleo/css/nucleo.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/devicons/1.8.0/css/devicons.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" />
 
     <!--FAVICON-->
     <link rel="shortcut icon" href="images/fav.png">
@@ -86,13 +84,9 @@
         logged_in_greeting="Hello there, how can i help you?" logged_out_greeting="Hello there, how can i help you?">
     </div>
 
-
     <!-- PRE LOADER -->
     <section class="preloader">
-        <div class="spinner">
-            <span class="spinner-rotate"></span>
-        </div>
-
+            <img src="images/loader.gif" id="loader">
     </section>
 
 
