fixed customer chatbot plug

--- a/index.html
+++ b/index.html
@@ -70,19 +70,23 @@
 <body>
 
     <!-- Load Facebook SDK for JavaScript -->
-    <div id="fb-root"></div>
-    <script>(function (d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) return;
-            js = d.createElement(s); js.id = id;
-            js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));</script>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
-    <!-- Your customer chat code -->
-    <div class="fb-customerchat" attribution=setup_tool page_id="872194893169133" theme_color="#2dce89"
-        logged_in_greeting="Hello there, how can i help you?" logged_out_greeting="Hello there, how can i help you?">
-    </div>
+<!-- Your customer chat code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="179898976244588"
+  theme_color="#2dce89"
+  logged_in_greeting="Hello there, How can I help you?"
+  logged_out_greeting="Hello there, How can I help you?">
+</div>
 
     <!-- PRE LOADER -->
     <section class="preloader">
