fixed work thumb

--- a/index.html
+++ b/index.html
@@ -606,8 +606,7 @@
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
-                                                laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
-                                                temporibus nisi accusamus.</p>
+                                                laboriosam quas, quos eaque molestias odio aut eius animi.</p>
                                             <h3>John Doe - NIGERIA</h3>
                                         </blockquote>
                                     </div>
@@ -616,8 +615,7 @@
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
-                                                laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
-                                                temporibus nisi accusamus.</p>
+                                                laboriosam quas, quos eaque molestias odio aut eius animi.</p>
                                             <h3>John Doe - NIGERIA</h3>
                                         </blockquote>
                                     </div>
@@ -626,8 +624,7 @@
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
-                                                laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
-                                                temporibus nisi accusamus.</p>
+                                                laboriosam quas, quos eaque molestias odio aut eius animi.</p>
                                             <h3>John Doe - NIGERIA</h3>
                                         </blockquote>
                                     </div>
@@ -636,8 +633,7 @@
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
-                                                laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
-                                                temporibus nisi accusamus.</p>
+                                                laboriosam quas, quos eaque molestias odio aut eius animi.</p>
                                             <h3>John Doe - NIGERIA</h3>
                                         </blockquote>
                                     </div>
@@ -646,8 +642,7 @@
                                         <blockquote>
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem,
                                                 veritatis nulla eum laudantium totam tempore optio doloremque
-                                                laboriosam quas, quos eaque molestias odio aut eius animi. Impedit
-                                                temporibus nisi accusamus.</p>
+                                                laboriosam quas, quos eaque molestias odio aut eius animi.</p>
                                             <h3>John Doe - NIGERIA</h3>
                                         </blockquote>
                                     </div>
