--- a/index.html
+++ b/index.html
@@ -69,15 +69,32 @@
 
 <body>
 
+     <!-- PRE LOADER -->
+     <section class="preloader">
+            <img src="images/loader.gif" id="loader">
+    </section>
+
     <!-- Load Facebook SDK for JavaScript -->
 <div id="fb-root"></div>
-<script>(function(d, s, id) {
+<script>
+(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
   js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));
+
+"message": {
+  "mid":"mid.14577641449818:41d102a3e1ae206a38",
+  "text":"hello, from customer chat!",
+  "tags": [
+    {
+      "source": "customer_chat_plugin"
+    }
+  ]
+}
+</script>
 
 <!-- Your customer chat code -->
 <div class="fb-customerchat"
@@ -86,13 +103,8 @@
   theme_color="#2dce89"
   logged_in_greeting="Hello there, How can I help you?"
   logged_out_greeting="Hello there, How can I help you?">
+
 </div>
-
-    <!-- PRE LOADER -->
-    <section class="preloader">
-            <img src="images/loader.gif" id="loader">
-    </section>
-
 
     <!-- MENU -->
     <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
