--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
 		}(document, 'script', 'facebook-jssdk'));</script>
 
     <!-- Your customer chat code -->
-    <div class="fb-customerchat" attribution=setup_tool page_id="179898976244588" theme_color="#4c5c96">
+    <div class="fb-customerchat" attribution=setup_tool page_id="179898976244588" theme_color="#2dce89">
     </div>
+    <!-- End customer chat code-->
 
     <!-- MENU -->
     <section class="navbar custom-navbar navbar-fixed-top" role="navigation">
