--- a/index.html
+++ b/index.html
@@ -244,20 +244,6 @@
         </div>
     </section>
 
-    <!-- <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                    <h1 class="ml1">
-                            <i class="fa fa-quote-left"></i>&nbsp;
-                                        <span class="text-wrapper">
-                                          <span class="line line1"></span>
-                                          <span class="letters">Nothing is impossible, the word itself says "I'm possible"!</span>
-                                          <span class="line line2"></span>
-                                        </span> <i class="fa fa-quote-right"></i>
-                                      </h1>
-            </div>
-        </div>
-    </div> -->
 
     <!-- SERVICES -->
     <section id="service" data-stellar-background-ratio="0.5">
@@ -277,7 +263,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
-                            <img src="images/blog-image1.png" class="img-responsive" alt="">
+                            <img src="images/serv/blog-image1.png" class="img-responsive" alt="">
                             <h3>Web Design</a></h3>
                             <p>Responsive website development that automatically scales up and down to meet the needs
                                 of whatever screen size it's on with great focus on user experience, optimization,
@@ -291,7 +277,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
-                            <img src="images/blog-image2.png" class="img-responsive" alt=""></a>
+                            <img src="images/serv/blog-image2.png" class="img-responsive" alt=""></a>
                             <h3>UI/UX Design</a></h3>
                             <p>Professional yet creative design interface for product branding that reflects your
                                 company’s spirit and leaves a lasting, memorable effect.</p>
@@ -303,7 +289,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
-                            <img src="images/blog-image3.png" class="img-responsive" alt=""></a>
+                            <img src="images/serv/blog-image3.png" class="img-responsive" alt=""></a>
                             <h3>Wordpress CMS</a></h3>
                             <p>Wordpress Content management system is a user-friendly administrative area allowing you
                                 to easily edit &
@@ -316,7 +302,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
-                            <img src="images/blog-image4.png" class="img-responsive" alt=""></a>
+                            <img src="images/serv/blog-image4.png" class="img-responsive" alt=""></a>
                             <h3>Bot Development</a></h3>
                             <p>Chat Bots development for easy, fast and digital customer service communication.</p>
                         </div>
@@ -327,7 +313,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
-                            <img src="images/blog-image5.png" class="img-responsive" alt=""></a>
+                            <img src="images/serv/blog-image5.png" class="img-responsive" alt=""></a>
                             <h3>Content Management</a></h3>
                             <p>Content management, article write ups for product documentation, promotion and blogs.</p>
                         </div>
@@ -338,7 +324,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
-                            <img src="images/blog-image6.png" class="img-responsive" alt=""></a>
+                            <img src="images/serv/blog-image6.png" class="img-responsive" alt=""></a>
                             <h3>Photography</a></h3>
                             <p>All types of classic photography can be created for your website. </p>
                         </div>
@@ -349,7 +335,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
-                            <img src="images/blog-image7.png" class="img-responsive" alt=""></a>
+                            <img src="images/serv/blog-image7.png" class="img-responsive" alt=""></a>
                             <h3>Digital Marketing</a></h3>
                             <p>Product/Brand promotion via several social and digital platforms leading to product
                                 boost and customers
@@ -362,7 +348,7 @@
                     <!-- BLOG THUMB -->
                     <div class="media blog-thumb">
                         <div class="media-body blog-info">
-                            <img src="images/blog-image8.png" class="img-responsive" alt=""></a>
+                            <img src="images/serv/blog-image8.png" class="img-responsive" alt=""></a>
                             <h3>Search Engine Optimization</a></h3>
                             <p>There's a lot of competition out there, so we ensure to include correct meta tagging &
                                 descriptions, open graphs and provide SEO training and strategy for each of our clients
@@ -496,7 +482,7 @@
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                         <a href="https://netty-finder.herokuapp.com" target="_blank" class="">
-                            <img src="images/work-image1.png" class="img-responsive" alt="Work">
+                            <img src="images/work/work-image1.png" class="img-responsive" alt="Work">
 
                             <div class="work-info">
                                 <h3>NettyFinder</h3>
@@ -511,7 +497,7 @@
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                         <a href="https://emperorphotoshop.com" target=_blank" class="">
-                            <img src="images/work-image2.png" class="img-responsive" alt="Work">
+                            <img src="images/work/work-image2.png" class="img-responsive" alt="Work">
 
                             <div class="work-info">
                                 <h3>EmperorPhotoShop.com</h3>
@@ -525,7 +511,7 @@
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                         <a href="https://inside-ful.com.ng" target="_blank" class="">
-                            <img src="images/work-image3.png" class="img-responsive" alt="Work">
+                            <img src="images/work/work-image3.png" class="img-responsive" alt="Work">
 
                             <div class="work-info">
                                 <h3>InsideFUL</h3>
@@ -539,7 +525,7 @@
                     <!-- WORK THUMB -->
                     <div class="work-thumb">
                         <a href="https://icafulokoja.github.io" target="_blank" class="">
-                            <img src="images/work-image4.jpg" class="img-responsive" alt="Work">
+                            <img src="images/work/work-image4.jpg" class="img-responsive" alt="Work">
 
                             <div class="work-info">
                                 <h3>ICA FULOKOJA</h3>
