--- a/index.html
+++ b/index.html
@@ -54,15 +54,10 @@
         }
     </script>
 
-    <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/magnific-popup.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
-    <link rel="stylesheet" href="assets/nucleo/css/nucleo.css" />
-
     <!--FAVICON-->
     <link rel="shortcut icon" href="images/fav.png">
 
-    <!-- MAIN CSS -->
+    <!-- STYLESHEET -->
     <link rel="stylesheet" href="css/app.css">
 
 </head>
@@ -100,7 +95,8 @@
                 </button>
 
                 <!-- lOGO TEXT HERE -->
-                <a href="index.html" class="navbar-brand"><i class="ni camera-compact"></i>&nbsp;BOLAJI AYODEJI</a>
+                <a href="index.html" class="navbar-brand hvr-bounce-out"><i class="ni camera-compact"></i> BOLAJI
+                    &nbsp;<i class="fa fa-adn"></i></a>
             </div>
 
             <!-- MENU LINKS -->
@@ -114,7 +110,7 @@
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="section-btn"><a href="resume.pdf">Download Resume</a></li>
+                    <li class="section-btn hvr-bounce-out"><a href="resume.pdf">Download Resume &nbsp;<i class="fa fa-cloud-download"></i></a></li>
                 </ul>
             </div>
 
@@ -138,15 +134,6 @@
 
             <!--COLUMN TWO-->
             <div class="col-md-6 col-sm-12">
-                <!----
-                <h1 class="ml1">
-                    <i class="fa fa-code"></i>&nbsp;&nbsp;
-                                <span class="text-wrapper">
-                                  <span class="line line1"></span>
-                                  <span class="letters">BOLAJI AYODEJI</span>
-                                  <span class="line line2"></span>
-                                </span>
-                              </h1> -->
                 <div class="home-info">
 
 
@@ -156,7 +143,7 @@
                         </a>
                     </h1>
 
-                    <a href="#about" class="btn section-btn smoothScroll">Get Started</a>
+                    <a href="#about" class="btn section-btn smoothScroll hvr-icon-down">Get Started <i class="fa fa-chevron-circle-down hvr-icon"></i></a>
                     <span>
                         CALL: +234 8109445504
                         <small>For any inquiry or questions.</small>
@@ -193,7 +180,7 @@
                             optimization and security. 💡</p>
                         <p>I'm passionate about developing and designing brilliant innovative products. 💡</p><br />
 
-                        <a class="section-btn" href="resume.pdf">View Resume <i class="fa fa-arrow-right"></i></a>
+                        <a class="section-btn hvr-icon-forward" href="resume.pdf">View Resume <i class="fa fa-arrow-right hvr-icon"></i></a>
 
 
                     </div>
@@ -394,7 +381,7 @@
                             <p>In this tutorial, I would show you how to check, test and make changes to a pull request
                                 before merging.</p>
                             <a href="https://medium.com/@bolajiayodeji/how-to-test-a-pull-request-locally-before-merging-634bb205d3a6"
-                                target="_blank" class="btn section-btn">Read
+                                target="_blank" class="btn section-btn hvr-float">Read
                                 article</a>
                         </div>
                     </div>
@@ -410,7 +397,7 @@
                                     to build Progressive Web Apps and deploy to Firebase and GitHub Pages.</a></h3>
                             <p>In this Codelab, we are going to convert a basic static site into a Progressive Web App</p>
                             <a href="https://pwafire.org/developer/codelabs/build-pwa-with-github-pages-and-firebase-hosting/"
-                                target="_blank" class="btn section-btn">Read article</a>
+                                target="_blank" class="btn section-btn hvr-float">Read article</a>
                         </div>
                     </div>
                 </div>
@@ -426,7 +413,7 @@
                             <p>This little guide demonstrate how to turn any Github repository with a bunch of Markdown
                                 files into a simple website using Github Pages and Jekyll.</p>
                             <a href="https://medium.com/@bolajiayodeji/how-to-convert-github-markdown-files-to-a-simple-website-b08602d05e1c"
-                                target="_blank" class="btn section-btn">Read
+                                target="_blank" class="btn section-btn hvr-float">Read
                                 article</a>
                         </div>
                     </div>
@@ -440,9 +427,11 @@
                             <h3><a href="https://medium.com/@bolajiayodeji/the-new-features-of-html-5-2-8e4829df9b72"
                                     target="_blank">The
                                     new features of HTML 5.2</a></h3>
-                            <p>The newly released HTML 5.2, changes and new features.</p>
+                            <p>In HTML 5.2, there were a number of additions and removals, all of which can be seen on
+                                the official HTML 5.2 Changes page. In this article, I’ll go over some of the changes I
+                                think will impact my development the most.</p>
                             <a href="https://medium.com/@bolajiayodeji/the-new-features-of-html-5-2-8e4829df9b72"
-                                target="_blank" class="btn section-btn">Read
+                                target="_blank" class="btn section-btn hvr-float">Read
                                 Article</a>
                         </div>
                     </div>
@@ -452,7 +441,8 @@
                         <div style="text-align: center;" class="col-lg-12">
                             <h2> <i class="fa fa-arrow-right"></i> Read all my articles <i class="fa fa-arrow-left"></i></h2>
                             <h2>
-                                <a href="https://medium.com/@bolajiayodeji" class="link-btn"> Click Here</a>
+                                <a href="https://medium.com/@bolajiayodeji" class="link-btn hvr-float"> Click Here <i
+                                        class="fa fa-medium"></i></a>
                             </h2>
                         </div>
                     </div>
@@ -540,7 +530,7 @@
                             <h2> <i class="fa fa-arrow-right"></i>View my other projects on github <i class="fa fa-arrow-left"></i>
                             </h2>
                             <h2>
-                                <a href="https://github.com/BolajiAyodeji?tab=repositories" class="link-btn">Click
+                                <a href="https://github.com/BolajiAyodeji?tab=repositories" class="link-btn hvr-float">Click
                                     Here&nbsp; <i class="fa fa-github"></i></a>
                             </h2>
                         </div>
